--- a/hugo.toml
+++ b/hugo.toml
@@ -29,7 +29,7 @@ disableKinds = ["RSS"]
 
 [[menu.main]]
   name       = "Home"
-  url        = "home"
+  url        = "/"
   weight     = 1
 
 [[menu.main]]
