--- a/hugo.toml
+++ b/hugo.toml
@@ -26,7 +26,7 @@ disableKinds = ["RSS"]
   logoMark     = ""
   logoText     = "MiScripts"
   logoHomeLink = "/"
-  path         = "/content/images/miscripts_small.jpg"
+  path         = ""
 
 [[menu.main]]
   name       = "Home"
