--- a/hugo.toml
+++ b/hugo.toml
@@ -47,12 +47,12 @@ disableKinds = ["RSS"]
   url        = "tutorials"
   weight     = 4
 
-#[[menu.main]]
-#  name       = "Community"
-#  url        = "community"
-#  weight     = 5
+[[menu.main]]
+  name       = "Community"
+  url        = "community"
+  weight     = 5
 
 [[menu.main]]
   name       = "Contact"
   url        = "contact"
-  weight     = 5
+  weight     = 6
