--- a/hugo.toml
+++ b/hugo.toml
@@ -42,10 +42,10 @@ disableKinds = ["RSS"]
   url        = "https://wiki.miscripts.org"
   weight     = 3
 
-#[[menu.main]]
-#  name       = "Tutorials"
-#  url        = "tutorials"
-#  weight     = 4
+[[menu.main]]
+  name       = "Submissions"
+  url        = "submission"
+  weight     = 4
 
 [[menu.main]]
   name       = "Community"
